<!--
  Copyright (C) 2016 The Android Open Source Project

  Licensed under the Apache License, Version 2.0 (the "License");
  you may not use this file except in compliance with the License.
  You may obtain a copy of the License at

       http://www.apache.org/licenses/LICENSE-2.0

  Unless required by applicable law or agreed to in writing, software
  distributed under the License is distributed on an "AS IS" BASIS,
  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  See the License for the specific language governing permissions and
  limitations under the License.
-->
<resources>
    <string name="app_name">Youtube audio player</string>
    <string name="error">Error</string>
    <string name="empty_search_query_error_message">Please, type your search query and try again</string>
    <string name="try_again_message">Try again</string>
    <string name="button_ok">OK</string>
    <string name="button_cancel">Cancel</string>
    <string name="no_connection_error_message_title">Network error</string>
    <string name="network_error_message">An error occurred, please check your internet connection or try again later</string>
    <string name="generic_error_message">Unknown error occurred, try again later</string>
    <string name="audio_extraction_failed_error_message">Audio extraction failed, please try again or select another track</string>
    <string name="youtube_request_failed_error_message">Youtube request failed, please check your internet connection and try again</string>
    <string name="menu_action_search">Search…</string>
    <string name="menu_action_clear_db">Clear database</string>
    <string name="menu_action_playlists">Playlists</string>
    <string name="menu_action_add_to_playlist">Add to playlist</string>
    <string name="menu_action_download">Download</string>
    <string name="menu_action_remove_from_playlist">Remove From Playlist</string>
    <string name="menu_action_close_app">Exit</string>
    <string name="error_no_stream_for_video">There is no audio stream for this video, it may be deleted or added too recently. Try again in a couple minutes or select an another video</string>
    <string name="error_playlist_name_empty">Playlist name should not be empty</string>
    <string name="error_playlist_name_not_unique">Playlist name should be unique</string>
    <string name="menu_action_settings">Settings</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_title_load_recommendations">Do not load recommended videos</string>
    <string name="pref_description_load_recommendations">Speeds up app startup and saves some traffic</string>
    <string name="key_pref_no_recommendations">pref_no_recommendations</string>

    <string name="pref_title_cache_size">Cache size</string>
    <string name="pref_description_cache_size">Cache is used to store previously played songs</string>
    <string name="pref_default_cache_size">250</string>
    <string name="key_pref_cache_size">pref_cache_size</string>
    <string-array name="pref_list_titles_cache_size">
        <item>No cache</item>
        <item>100 MB</item>
        <item>250 MB</item>
        <item>500 MB</item>
        <item>750 MB</item>
        <item>1 GB</item>
    </string-array>
    <string-array name="pref_list_values_cache_size">
        <item>0</item>
        <item>100</item>
        <item>250</item>
        <item>500</item>
        <item>750</item>
        <item>1000</item>
    </string-array>

    <string name="pref_title_save_in_cache_only_wifi">Restrict caching via mobile internet</string>
    <string name="pref_description_save_in_cache_only_wifi">Consume more mobile traffic if turned off</string>
    <string name="key_pref_save_in_cache_only_wifi">pref_mobile_network_caching</string>

    <string name="pref_title_audio_quality">Audio quality</string>
    <string name="pref_description_audio_quality">Better quality consumes more traffic
        Automatic is recommended (it will select audio quality based on your connection type)</string>
    <string name="pref_default_audio_quality">0</string>
    <string name="key_pref_audio_quality">pref_audio_quality</string>
    <string-array name="pref_list_titles_audio_quality">
        <item>Automatic</item>
        <item>Best</item>
        <item>Medium</item>
        <item>Low</item>
    </string-array>
    <string-array name="pref_list_values_audio_quality">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>
</resources>